<resources>
    <string name="app_name">BTech Buddy</string>
    <string name="default_web_client_id">64241599053-ki9apbdt340habgqm2uqu20ohmcohq7t.apps.googleusercontent.com</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="account">Don\'t you have an account yet? <font color="#28DEDB"><b><u><i>Sign Up</i></u></b></font></string>
    <string name="or">OR</string>
    <string name="forgot_password"><font color="#28DEDB"><u>I forget my password</u></font></string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Forget My Password</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="logins">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="impt_ques_ans">Important\nQuestion\nAnswer</string>
    <string name="fullStackWeb">Full-Stack\nWeb Development</string>
    <string name="quiz">Quiz</string>
    <string name="roadmap">Roadmap</string>
    <string name="more_text">Write a Java program to create a simple Student Management System using
        classes and objects.class with the </string>
    <string name="python">Python</string>
    <string name="java">Java</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="time">Time:</string>
    <string name="d">D.</string>
    <string name="level1">Level–1: Basics</string>
    <string name="responsive">Responsive\nDesign</string>
    <string name="dom">Dom\nManipulation</string>
    <string name="versionControl">Version Control with Git &amp; Github</string>
    <string name="level2">Level-2:Intermediate </string>
    <string name="arrowFunctions">Arrow\nFunctions</string>
    <string name="frontendFramework">React.js Or\nVue.js/Angular</string>
    <string name="cssFramework">CSS Frameworks &amp; UI Libraries</string>
    <string name="portfolio">Portfolio\nWebsite</string>
    <string name="backEnd">Level-3: Back-End Development</string>
    <string name="auth">Authentication &amp; Authorization</string>
    <string name="blog">Blog Platform</string>
    <string name="level4">Level-4: Full-Stack Development</string>
    <string name="integrate">Integrate Front-End with Back-End</string>
    <string name="connecting">Connect React\nTo Node+DB</string>
    <string name="advanceTopic">Advanced Topics</string>
    <string name="websocket">1. WebSockets for real-time apps\n2. File upload, Image storage\n3. Server side rendering, Next.js\n4. Deployment on platforms like Heroku, Vercel, Netlify, AWS</string>
    <!--    <string name="remember"><b>✨Remember:</b> Every expert was once a beginner. Don\'t rush. Learn, build, fail, improve and repeat.
Your first small project might look simple, but it\'s the first brick of your full-stack empire.
Full-stack development is not just a coding-it's the power to create anything you imagine online</string>-->
    <string name="practice_projects">Practice Projects</string>
    <string name="chat_app">Chat App</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="chat_apps">Chat App</string>
    <string name="sessions">Sessions</string>
    <string name="oauth">OAuth</string>
    <string name="jwt">JWT</string>
    <string name="android">Full-Stack Android Development</string>
    <string name="javaKotlin">Level-1: Java Or Kotlin</string>
    <string name="activity_nlifecycle">Activity\nLifecycle</string>
    <string name="layouts">Layouts</string>
    <string name="textview">TextView</string>
    <string name="edittext">EditText</string>
    <string name="button">Button</string>
    <string name="imageview">ImageView</string>
    <string name="intent">Intent</string>
    <string name="navigation">Navigation</string>
    <string name="uiux"><![CDATA[Level-2: UI/UX & App Structure]]></string>
    <string name="card">Card</string>
    <string name="material">Material\nComponent</string>
    <string name="responsiveness">Responsive\nDesign</string>
    <string name="calculator_app">Calculator App</string>
    <string name="loginSignup">Login\nSignup UI</string>
    <string name="remember">✨<b>Remember:</b> Every expert was once a beginner. Don\'t rush. Learn, build, fail, improve and repeat. Your first small project might look simple, but it\'s the first brick of your full-stack empire. Full-stack development is not just a coding-it\'s the power to create anything you imagine online</string>
    <string name="fragmentNavigation">Fragment &amp; Navigation</string>
    <string name="fragmentLifecycle">Fragment\nLifecycle</string>
    <string name="navigationGraph">Navigation\nGraph</string>
    <string name="bottomNavigation">Bottom\nNavigation</string>
    <string name="DrawerLayout">Drawer\nLayout</string>
    <string name="to_do">To-Do List App</string>
    <string name="foodApp">Food Delivery\nApp</string>
    <string name="level3Android">Level-3: Data &amp; Logic</string>
    <string name="sharedPreferences">Shared\nPreferences</string>
    <string name="roomDatabase">Room\nDatabase</string>
    <string name="viewModel">View Mode</string>
    <string name="liveData">Live Data</string>
    <string name="restApi">REST APIs &amp; Retrofit</string>
    <string name="httpRequest">HTTP\nRequests</string>
    <string name="jsonParsing">JSON\nParsing</string>
    <string name="retrofit">Retrofit</string>
    <string name="glidePicasso">Glide or\nPicasso</string>
    <string name="noteApp">Note App</string>
    <string name="weatherApp">Weather App</string>
    <string name="level4AdvanceConcept">Level-4: Advanced Concept</string>
    <string name="jetpackLibraries">Jetpack Libraries</string>
    <string name="jetpackCompose">Jetpack Compose</string>
    <string name="dataStore">Data Store</string>
    <string name="workManager">Work Manager</string>
    <string name="declarativeUi">Declarative UI\nToolkit</string>
    <string name="replaceXML">Replace XML\nLayout</string>
    <string name="animation">Animation</string>
    <string name="theme">Theme</string>
    <string name="newsApp">News App</string>
    <string name="fitnessTracker">Fitness Tracker\nApp</string>
    <string name="level5">Level-5: Firebase &amp; Deployment</string>
    <string name="firebaseIntegration">Firebase Integration</string>
    <string name="authentication">Authentication</string>
    <string name="firestoreDatabase">Firestore\nDatabase</string>
    <string name="cloudMessaging">Cloud\nMessaging</string>
    <string name="analytics">Analytics</string>
    <string name="crashlytics">Crashlytics</string>
    <string name="testngDebugging">Testing &amp; Debugging</string>
    <string name="logcat">Logcat</string>
    <string name="breakpoint">Breakpoint</string>
    <string name="unitTesting">Unit Test</string>
    <string name="uiTest">UI Test</string>
    <string name="handlingCrashes">Handling\nCrashes</string>
    <string name="publish">Publish On Play Store</string>
    <string name="appBundle">App Bundle</string>
    <string name="appIcon">App Icon</string>
    <string name="screenshot">Screenshot</string>
    <string name="description">Description</string>
    <string name="privacyPolicy">Privacy\nPolicy Setup</string>
    <string name="androidRemember"><b>✨Final Words: </b>You don\'t need to be genius - just consistent. Code every day, build small projects and keep improving</string>
    <string name="dataStorage">Data Storage Options</string>
    <string name="testText">The morning sun painted the sky in shades of gold and pink.
Birds chirped softly, greeting a brand-new day.A cool breeze whispered through the trees.
The world felt calm, alive, and full of promise.Somewhere, a small town was slowly waking up.
People brewed coffee and opened their windows.Children prepared for school with sleepy smiles.
Dreams from the night still lingered in their minds.The streets began to hum with gentle energy.
Life was beginning its daily rhythm again.Every heartbeat carried a silent hope for joy.
Every step marked a chance for something new.The world wasn’t perfect, but it was beautiful.
Even in chaos, there was order and wonder.Even in silence, there was meaning and peace.
The day stretched ahead, waiting to be written.Each person would tell their own small story.
Some with laughter, others with quiet courage.By nightfall, memories would fill the sky.
And tomorrow, the world would start again.</string>
    <string name="mechanical">Fundamentals of Mechanical Engineering</string>
    <string name="chemistry">Engineering Chemistry</string>
    <string name="soft_skills">Soft Skills</string>
    <string name="electrical">Fundamentals of Electrical Engineering</string>
    <string name="physics">Engineering Physics</string>
    <string name="environment_ecology">Environment and Ecology</string>
    <string name="programmingProblemSolving">Programming for Problem Solving</string>
    <string name="electronics">Fundamentals of Electronics Engineering</string>
    <string name="dataStructure">Data\nStructure</string>
    <string name="computerArchitecture">Computer Organization and Architecture</string>
    <string name="discrete_structure_theory_of_logic"><![CDATA[Discrete Structure & Theory of Logic]]></string>
    <string name="pythonProgramming">Python Programming</string>
    <string name="operatingSystem">Operating System</string>
    <string name="theoryAutomata">Theory of Automata and Formal Languages</string>
    <string name="oops">Object Oriented Programming with Java</string>
    <string name="cyberSecurity">Cyber\nSecurity</string>
    <string name="technicalCommunication">Technical\nCommunication</string>
    <string name="semester4th">4th-Semester</string>
    <string name="semester1st">1st-Semester</string>
    <string name="semester2nd">2nd-Semester</string>
    <string name="semester3rd">3rd-Semester</string>
    <string name="humanValue">Universal Human Values and Professional Ethics</string>
    <string name="data_structure">Data Structure</string>
    <string name="cyber_security">Cyber Security</string>
    <string name="technical_communication">Technical Communication</string>
    <string name="programmingLanguage">Select Programming Language</string>
    <string name="playAgain">Play Again</string>
    <string name="exit">Exit</string>
    <string name="sign_out">Sign Out</string>
    <string name="a">A.</string>
    <string name="pythonHighScore">Python High Score</string>
    <string name="javaHighScore">Java High Score</string>
    <string name="out_of_50">out of 50</string>
    <string name="_0">0</string>
    <string name="show_ads">Show Ads</string>
    <string name="source">All questions sourced from: aktuonline.com(Unofficial)</string>

</resources>


