<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fontFamily="@font/yeseva_one"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/login"
        android:textColor="@color/forgotPasswordBlue"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--        android:textColor="@color/blue_violet"-->
    <!-- Shadow color -->
    <!-- X-axis offset -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/login_design"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/email_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/password_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/lato_bold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/lato"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black"/>

        </LinearLayout>

<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:id="@+id/buttonGoogleSignIn"-->
<!--            android:layout_width="250dp"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginTop="10dp"/>-->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleLoginBtn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="15dp"
            app:icon="@drawable/google_brand_icon"
            app:iconGravity="textStart"
            app:iconTint="@null" />


<!--        android:background="@drawable/edittext_bg"-->

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato"
            android:text="@string/account"
            android:textColor="@color/notYetAccount"/>

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato"
            android:text="@string/forgot_password"
            android:textColor="@color/black"/>

        <!--        <ProgressBar-->
        <!--            android:id="@+id/progressBarLogin"-->
        <!--            style="?android:attr/progressBarStyle"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>